classDiagram
    direction TB

    class Utilisateur {
        email : texte
        motDePasse : texte
        nom : texte
        prenom : texte
        role : énuméré
        estActif : booléen
        emailVerifie : booléen
        emailModificationCommentaire : booléen
        emailRappelJ1 : booléen
    }

    class Service {
        nom : texte
        description : texte
        estActif : booléen
    }

    class Creneau {
        dateDebut : date
        dateFin : date
        commentaireAuditeur : texte
        estActif : booléen
    }

    class TypeRdv {
        code : texte
        libelle : texte
        couleurHex : texte
        estActif : booléen
    }

    class Reservation {
        dateReservation : date
        statut : énuméré
        commentaireAuditeur : texte
        dateAnnulation : date
        motifAnnulation : texte
    }

    class Notification {
        type : énuméré
        titre : texte
        message : texte
        lu : booléen
    }

    class ResetPasswordRequest {
        jetonHache : texte
        demandeLe : date
        expireLe : date
    }

    class JournalAdmin {
        dateAction : date
        typeAction : énuméré
        acteurLibelle : texte
        cibleLibelle : texte
    }

    class HistoriqueUtilisateur {
        id : entier
        utilisateurId : entier
        champModifie : texte
        ancienneValeur : texte
        nouvelleValeur : texte
        dateModification : date
    }

    Service "0..1" -- "*" Utilisateur : rattacher
    Utilisateur "1" -- "*" Creneau : publier
    TypeRdv "1" -- "*" Creneau : catégoriser
    Creneau "1" -- "*" Reservation : concerner
    Utilisateur "1" -- "*" Reservation : effectuer
    Utilisateur "1" -- "*" Notification : recevoir
    Reservation "0..1" -- "*" Notification : référencer
    Utilisateur "1" -- "*" ResetPasswordRequest : demander

    note for JournalAdmin "Classe isolée, sans association (choix délibéré). Acteur et cible figés en libellés (append-only) : la trace survit à la suppression des comptes — immuabilité RGPD."

    note for HistoriqueUtilisateur "Classe isolée, sans association (choix délibéré). Trace alimentée par un déclencheur au niveau de la base ; utilisateurId est un identifiant scalaire sans clé étrangère. Table purgée lors de l'anonymisation d'un compte, au titre du droit à l'effacement (RGPD art. 17)."
